<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/view_page_background"
    android:orientation="vertical">

    <View
        android:id="@+id/statusbar_view"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <com.submeter.android.view.MyWebView
        android:id="@+id/webview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </com.submeter.android.view.MyWebView>

    <View
        style="@style/style_seperator_line_h" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cs_view"
            style="@style/style_gray_11"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:drawablePadding="1dp"
            android:drawableTop="@mipmap/kftb"
            android:gravity="center"
            android:text="@string/cs_label" />

        <View
            style="@style/style_seperator_line_v"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/shop_view"
            style="@style/style_gray_11"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:drawablePadding="1dp"
            android:drawableTop="@mipmap/dptb"
            android:gravity="center"
            android:text="@string/shop_label" />

        <View
            style="@style/style_seperator_line_v"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/follow_view"
            style="@style/style_gray_11"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:drawablePadding="1dp"
            android:drawableTop="@mipmap/gztb"
            android:gravity="center"
            android:text="@string/follow_label" />

        <TextView
            android:id="@+id/add_shoppingcart_view"
            style="@style/style_ffffff_14"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/yellow_color"
            android:gravity="center"
            android:text="@string/add_shoppingcart_label" />

        <TextView
            android:id="@+id/buy_view"
            style="@style/style_ffffff_14"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/red_color"
            android:gravity="center"
            android:text="@string/buy_label" />


    </LinearLayout>

</LinearLayout>