<?xml version="1.0" encoding="utf-8"?>
<com.submeter.android.view.MyLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rt_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/view_page_background"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/login_bg">

        <View
            android:id="@+id/statusbar_view"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

        <ImageView
            android:id="@+id/left_image"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_below="@+id/statusbar_view"
            android:layout_marginLeft="@dimen/five_dp_margin"
            android:scaleType="centerInside"
            android:src="@mipmap/return_ho" />

        <TextView
            android:id="@+id/right_text"
            style="@style/style_ffffff_15"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/statusbar_view"
            android:gravity="center"
            android:text="@string/register_btn" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="-230dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/login_logo" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@mipmap/name" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@mipmap/login_info_bg"
            android:orientation="vertical">

            <EditText
                android:id="@+id/account_edit"
                style="@style/style_register_edit"
                android:layout_marginTop="10dp"
                android:drawableLeft="@mipmap/account"
                android:hint="@string/account_hint" />

            <com.submeter.android.view.DrawableEditText
                android:id="@+id/psd_edit"
                style="@style/style_register_edit"
                android:layout_marginTop="10dp"
                android:drawableLeft="@mipmap/psd"
                android:drawableRight="@mipmap/psd_show"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/ok_btn"
                style="@style/style_ffffff_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginTop="20dp"
                android:background="@mipmap/login_btn"
                android:gravity="center"
                android:text="@string/login_label" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/forget_password"
                    style="@style/style_black_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="15dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="15dp"
                    android:text="@string/forget_psd_label" />

                <TextView
                    android:id="@+id/register_text"
                    style="@style/style_black_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    android:paddingBottom="15dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="15dp"
                    android:text="@string/no_account_label" />

            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

    <TextView
        style="@style/style_black_15"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_alignParentRight="true"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal|bottom"
        android:padding="15dp"
        android:text="@string/copyright"
        android:textSize="@dimen/font_14_size" />
</com.submeter.android.view.MyLinearLayout>