<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_corner_10_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/top_imageView"
            android:layout_width="match_parent"
            android:layout_height="152dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:scaleType="centerCrop"
            fresco:actualImageScaleType="centerCrop"
            fresco:roundBottomLeft="true"
            fresco:roundBottomRight="true"
            fresco:roundTopLeft="true"
            fresco:roundTopRight="true"
            fresco:roundedCornerRadius="@dimen/ten_dp_margin" />

        <TextView
            style="@style/style_black_22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/five_dp_margin"
            android:text="@string/open_notification_title" />

        <TextView
            style="@style/style_666666_13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/open_notification_sub_title" />

        <TextView
            style="@style/style_666666_13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="@dimen/five_dp_margin"
            android:text="@string/open_notification_reason" />

        <Button
            android:id="@+id/ok_btn"
            style="@style/style_ffffff_13"
            android:layout_width="168dp"
            android:layout_height="32dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_oval_red"
            android:gravity="center"
            android:text="@string/open_notification" />
    </LinearLayout>

    <ImageView
        android:id="@+id/close_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="@dimen/five_dp_margin"
        android:layout_marginTop="@dimen/five_dp_margin"
        android:gravity="center"
        android:src="@mipmap/push_close" />
</RelativeLayout>